# time_bot

./: .gitignore  Cargo.toml  README.md
conf/: conf.example.toml
src/: main.rs
src/commands/: mod.rs  set_timezone.rs
src/events/: mod.rs
