[package]
name = "time_bot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
log = "0.4.17"
fern = "0.6.1"
poise = "0.2.2"
serde = "1.0.139"
toml = "0.5.9"
tokio = {version = "1.20.3", features = ["full"]}
serde_with = "2.0.0"
